--- a/rootfs/etc/avahi/avahi-daemon.conf
+++ b/rootfs/etc/avahi/avahi-daemon.conf
@@ -24,14 +24,14 @@
 #browse-domains=0pointer.de, zeroconf.org
 use-ipv4=yes
 use-ipv6=no
-allow-interfaces=end0
+#allow-interfaces=end0
 #deny-interfaces=eth1
 #check-response-ttl=no
 #use-iff-running=no
 #enable-dbus=yes
 #disallow-other-stacks=no
 #allow-point-to-point=no
-cache-entries-max=0
+#cache-entries-max=0
 #clients-max=4096
 #objects-per-client-max=1024
 #entries-per-entry-group-max=32
