--- a/rootfs/etc/avahi/avahi-daemon.conf
+++ b/rootfs/etc/avahi/avahi-daemon.conf
@@ -24,6 +24,7 @@
 #browse-domains=0pointer.de, zeroconf.org
 use-ipv4=yes
 use-ipv6=no
+publish-aaaa-on-ipv4=no
 allow-interfaces=end0
 #deny-interfaces=eth1
 #check-response-ttl=no
