--- a/rootfs/etc/avahi/avahi-daemon.conf
+++ b/rootfs/etc/avahi/avahi-daemon.conf
@@ -32,7 +32,7 @@ allow-interfaces=end0
 #enable-dbus=yes
 #disallow-other-stacks=no
 #allow-point-to-point=no
-#cache-entries-max=0
+cache-entries-max=0
 #clients-max=4096
 #objects-per-client-max=1024
 #entries-per-entry-group-max=32
