--- a/rootfs/etc/avahi/avahi-daemon.conf
+++ b/rootfs/etc/avahi/avahi-daemon.conf
@@ -24,14 +24,14 @@
 #browse-domains=0pointer.de, zeroconf.org
 use-ipv4=yes
 use-ipv6=no
-#allow-interfaces=end0
+allow-interfaces=end0
 #deny-interfaces=eth1
 #check-response-ttl=no
 #use-iff-running=no
 #enable-dbus=yes
 #disallow-other-stacks=no
 #allow-point-to-point=no
-#cache-entries-max=0
+cache-entries-max=0
 #clients-max=4096
 #objects-per-client-max=1024
 #entries-per-entry-group-max=32
@@ -51,7 +51,7 @@ publish-workstation=no
 #publish-domain=yes
 #publish-dns-servers=192.168.50.1, 192.168.50.2
 #publish-resolv-conf-dns-servers=yes
-#publish-aaaa-on-ipv4=no
+publish-aaaa-on-ipv4=no
 #publish-a-on-ipv6=no
 
 [reflector]
