--- a/rootfs/etc/avahi/avahi-daemon.conf
+++ b/rootfs/etc/avahi/avahi-daemon.conf
@@ -42,7 +42,7 @@ ratelimit-burst=1000
 enable-wide-area=yes
 
 [publish]
-#disable-publishing=no
+disable-publishing=yes
 #disable-user-service-publishing=no
 #add-service-cookie=no
 #publish-addresses=yes
