--- a/rootfs/etc/avahi/avahi-daemon.conf
+++ b/rootfs/etc/avahi/avahi-daemon.conf
@@ -42,7 +42,7 @@ ratelimit-burst=1000
 enable-wide-area=yes
 
 [publish]
-disable-publishing=yes
+#disable-publishing=no
 #disable-user-service-publishing=no
 #add-service-cookie=no
 #publish-addresses=yes
@@ -55,7 +55,7 @@ publish-aaaa-on-ipv4=no
 #publish-a-on-ipv6=no
 
 [reflector]
-enable-reflector=yes
+enable-reflector=no
 #reflect-ipv=no
 #reflect-filters=_airplay._tcp.local,_raop._tcp.local
 
